--- a/src/components/fonts/fonts.css
+++ b/src/components/fonts/fonts.css
@@ -33,22 +33,11 @@
     margin: 0;
     margin-left: 180px;
   }
-  /* 
-  span{
-  font-family: 'Constellations Ostia' ;
-  font-size: 80px;
-  }*/
 
   @font-face {
     font-family: 'JACKLB';
-    font-style: normal;
+    /* font-style: normal; */
     src: url('JACKLB.TTF'), url('JACKLB.TTF'),
       url(JACKLB.TTF) format('truetype');
   }
-  h1{
-    font-family:'JACKLB' ;
-    font-size: 100px;
-    height: 100%;
-    width: 100%;
-    color : red;
-  } 
+  
